apps/generic/overlays/youtarr/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtarr
spec:
  template:
    spec:
      containers:
        - name: container
          image: dialmaster/youtarr:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /config
              subPath: configs/youtarr
            - name: yasr-volume
              mountPath: /data
              subPath: configs/transmission/
            - name: main-volume
              mountPath: /media
              subPath: public/youtube
          ports:
            - name: http
              containerPort: 3087
              protocol: TCP
