apps/generic/overlays/youtarr/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtarr
spec:
  ports:
    - name: http
      port: 3087
      protocol: TCP
      targetPort: http
